Criação do template inicial da loja
Criação de um template a ser utilizado em todas as páginas do protótipo,
contendo topo e rodapé. O topo contém apenas o nome da loja e o rodapé
não possui conteúdo.

--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -9,6 +9,8 @@
   <title>Safie</title>
 
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="/skeleton-css/css/normalize.css">
+  <link rel="stylesheet" href="/skeleton-css/css/skeleton.css">
   <link rel="stylesheet" href="/store.css">
 
 </head>
