--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="/skeleton-css/css/skeleton.css">
   <link rel="stylesheet" href="/store.css">
 
+  <link rel="icon" type="image/png" href="/img/favicon.png">
+
 </head>
 
 <body>
