--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -11,6 +11,7 @@
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/skeleton-css/css/normalize.css">
   <link rel="stylesheet" href="/skeleton-css/css/skeleton.css">
+  <link rel="stylesheet" href="/tables.css">
   <link rel="stylesheet" href="/store.css">
 
   <link rel="icon" type="image/png" href="/img/favicon.png">
