--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -8,8 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Safie</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
-  <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/skeleton-css/css/normalize.css">
   <link rel="stylesheet" href="/skeleton-css/css/skeleton.css">
   <link rel="stylesheet" href="/tables.css">
