Inicio da implementação da listagem de proudos estilo masonry e do menu responsivo

--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -12,8 +12,9 @@
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/skeleton-css/css/normalize.css">
   <link rel="stylesheet" href="/skeleton-css/css/skeleton.css">
-  <link rel="stylesheet" href="/tables.css">
   <link rel="stylesheet" href="/store.css">
+  <link rel="stylesheet" href="/tables.css">
+  <link rel="stylesheet" href="/masonry.css">
 
   <link rel="icon" type="image/png" href="/img/favicon.png">
 
