Incluindo campo para cálculo de frete,e total dos produtos no carrinho

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -108,8 +108,37 @@
                 </table>
               </div>
             </div>
+
             <div class="row">
-              <div class="twelve columns"><button class="dark-button">Finalizar Compra</button></div>
+              <div class="six columns">
+                 <div class="frete">
+                    <h4>Frete</h4>
+                    <input type="text" placeholder="Informe seu cep">
+                    <button class="light-button">Calcular</button>
+                    <p> O frete para o cep <strong>36204-392</strong> é <strong>R$20,00</strong> </p>
+                  </div>
+              </div>
+              <div class="six columns">
+                <div class="total">
+                  <table>
+                    <tr>
+                      <td><strong>Casaqueto Mirage</strong></td>
+                      <td>R$1244,00</td>
+                    </tr>
+                    <tr>
+                      <td><strong>Frete</strong></td>
+                      <td>R$20,00</td>
+                    </tr>
+                    <tr class="subtotal">
+                      <td><h4>Total</h4></td>
+                      <td><h4>$1264,00</td>
+                    </tr>
+                  </table>
+                  <br/>
+                  <button class="dark-button">Finalizar Compra</button>
+
+                </div>
+              </div>
             </div>
           </div>
         </div>
