Tela de login e de cadastro criadas

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -120,6 +120,9 @@
               </div>
               <div class="six columns">
                 <div class="total">
+                  <h4>
+                      Valor da compra
+                  </h4>
                   <table>
                     <tr>
                       <td><strong>Casaqueto Mirage</strong></td>
