Modificacao do mysafie

--- a/src/frontend/mysafie.html
+++ b/src/frontend/mysafie.html
@@ -62,7 +62,10 @@
           <div class="container">
             <h2>My Safie</h2>
             <hr>
-            <p>Olá, Joana</p>
+            <p class="boas-vindas">Olá, Joana</p>
+            <div class="titulo-mysafie">
+                  <p>Minhas Medidas</p>
+            </div>
             <div class='row cerca'>
               <div class='minhas-medidas'>
                 <div class='six columns'>
@@ -203,6 +206,9 @@
                 </div>
               </div>
             </div>
+            <div class="titulo-mysafie">
+                  <p>Meus<br/>Pedidos</p>
+            </div>
             <div class='row cerca'>
               <div class='meus-pedidos'>
                 <div class='row'>
@@ -271,6 +277,9 @@
                 </div>
               </div>
             </div>
+            <div class="titulo-mysafie">
+                  <p>Meus</br>enderecos</p>
+            </div>
             <div class='row cerca'>
               <div class='my-address'>
                 <div class='row'>
@@ -295,6 +304,51 @@
                     </div>
                     <div class='new-address'>
                       <button class='new-address-button'><i class="fa fa-plus-square-o" aria-hidden="true"></i> Adicionar Novo endereco</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="titulo-mysafie">
+                  <p>Meu<br/>carrinho</p>
+            </div>
+            <div class='row cerca'>
+              <div class='meu-carrinho'>
+                <div class='row'>
+                  <div class='twelve columns'>
+                        <div class='row'>
+                          <div class="three columns">
+                          <img src='img/demo/saia-lapis-detalhe.jpg' width="150" />
+                          <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                          <p>Saia</p>
+                          <p>R$ 100,00</p>
+                          </div>
+                          <div class="three columns">
+                          <img src='img/demo/saia-lapis-detalhe.jpg' width="150" />
+                          <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                          <p>Saia</p>
+                          <p>R$ 100,00</p>
+                          </div>
+                          <div class="three columns">
+                          <img src='img/demo/saia-lapis-detalhe.jpg' width="150" />
+                           <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                          <p>Saia</p>
+                          <p>R$ 100,00</p>
+                          </div>
+                          <div class="three columns">
+                          <img src='img/demo/saia-lapis-detalhe.jpg' width="150" />
+                           <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                          <p>Saia</p>
+                          <p>R$ 100,00</p>
+                          </div>
+                        </div>
+                    <div class="pedido-info">
+                      <p><strong>Total:</strong> R$200,00</p>
+                    </div>
+                    <div class="limpar">
+                    </div>
+                    <div class='new-address'>
+                      <button class='new-address-button'>Finalizar Pedido</button>
                     </div>
                   </div>
                 </div>
