Alteraçao final da MySafie

--- a/src/frontend/mysafie.html
+++ b/src/frontend/mysafie.html
@@ -75,7 +75,7 @@
                   <table>
                     <tr>
                       <td>
-                        Busto
+                        Largura do braço
                       </td>
                       <td>
                         12,34cm
@@ -83,7 +83,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Cintura
+                        Ombro a ombro
                       </td>
                       <td>
                         12,34cm
@@ -91,7 +91,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Quadris
+                        Largura da Coxa
                       </td>
                       <td>
                         12,34cm
@@ -99,7 +99,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Largura das Costas
+                      Comprimento da perna
                       </td>
                       <td>
                         12,34cm
@@ -107,7 +107,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Comprimento Frente
+                        Altura do joelho
                       </td>
                       <td>
                         12,34cm
@@ -115,7 +115,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Comprimento Manga Curta
+                        Largura do tornozelo
                       </td>
                       <td>
                         12,34cm
@@ -123,7 +123,7 @@
                     </tr>
                     <tr>
                       <td>
-                        Comprimento Manga Comprida
+                        Altura do gancho
                       </td>
                       <td>
                         12,34cm
@@ -131,7 +131,16 @@
                     </tr>
                     <tr>
                       <td>
-                        Largura do Punho
+                        Altura do busto
+                      </td>
+                      <td>
+                        12,34cm
+                      </td>
+                    </tr>
+                    </tr>
+                    <tr>
+                      <td>
+                        Altura da cintura
                       </td>
                       <td>
                         12,34cm
@@ -141,6 +150,15 @@
                 </div>
                 <div class='six columns'>
                   <table>
+                    </tr>
+                    <tr>
+                      <td>
+                        Altura do quadril
+                      </td>
+                      <td>
+                        12,34cm
+                      </td>
+                    </tr>
                     <tr>
                       <td>
                         Busto
