Tela de checkout

--- a/src/frontend/checkout.html
+++ b/src/frontend/checkout.html
@@ -66,22 +66,38 @@
                     <div class="six columns">
                       <h4>Resumo do Pedido</h4>
                       <div class="box">
-                        <div class="row">
                           <div class="inside-box">
-                          <p>1 saia lápis</p>
-                          <p>1 vestiodo essence</p>
+                              <div class="row">
+                                <div class="eight columns">
+                                  <p>1 saia lápis</p>
+                                  <p>1 vestiodo essence</p>
+                                </div>
+                                <div class="four columns">
+                                    <p>R$ 100,00</p>
+                                    <p>R$ 100,00</p>
+                                </div>
+                              </div>
                           </div>
-                        </div>
-                        <div class="row">
-                          <div class="inside-box">
-                          <p>Frete</p>
+                        <div class="inside-box">
+                              <div class="row">
+                                <div class="eight columns">
+                                  <p>Frete</p>
+                                </div>
+                                <div class="four columns">
+                                    <p>R$ 20,00</p>
+                                </div>
+                              </div>
                           </div>
-                        </div>
-                        <div class="row">
-                          <div class="inside-box">
-                          <p><strong>Total a pagar</strong></p>
+                        <div class="inside-box">
+                              <div class="row">
+                                <div class="eight columns">
+                                  <p><strong>Total a pagar</strong></p>
+                                </div>
+                                <div class="four columns">
+                                  <p><strong>R$ 20,00</strong></p>
+                                </div>
+                              </div>
                           </div>
-                        </div>
                       </div>
                     </div>
                     <div class="six columns">
@@ -91,16 +107,26 @@
                             <div class="six columns">
                               <div class="linha-exterior">
                                 <div class="inside-box">
-                                <p>1 saia lápis</p>
-                                <p>1 vestiodo essence</p>
+                                  <p>Nome cliente</p>
+                                  <p>Nome Rua/Número</p>
+                                  <p>Bairro</p>
+                                  <p>Cidade</p>
+                                  <p>222222</p>
+                                  <p>Brasil</p>
+                                  <p class="alterar-end">Alterar endereço</p>
                                 </div>
                               </div>
                             </div>
                             <div class="six columns">
                               <div class="linha-exterior-2">
                                 <div class="inside-box">
-                                <p>1 saia lápis</p>
-                                <p>1 vestiodo essence</p>
+                                  <p>Nome cliente</p>
+                                  <p>Nome Rua/Número</p>
+                                  <p>Bairro</p>
+                                  <p>Cidade</p>
+                                  <p>222222</p>
+                                  <p>Brasil</p>
+                                  <p class="alterar-end">Alterar endereço</p>
                                 </div>
                               </div>
                             </div>
