--- a/src/store/static/index.html
+++ b/src/store/static/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Safie</title>
 
+
   <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans|Raleway" rel="stylesheet">
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="/skeleton-css/css/normalize.css">
@@ -23,6 +24,8 @@
 <body>
   <div id="app"></div>
   <script src="/application.js"></script>
+  <script type="text/javascript" src="https://stc.sandbox.pagseguro.uol.com.br/pagseguro/api/v2/checkout/pagseguro.lightbox.js"></script>
+
 </body>
 
 
